Added Swaggo tags to undocumented endpoints.
